--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<h1>mathdevelops.github.io is still under construction.</h1>
+<h1><b>mathdevelops.github.io</b> is still under construction.</h1>
 
 </body>
 </html>
