--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Math Development</title>
-</head>
-<body>
 
-<h1><b>mathdevelops.github.io</b> is still under construction.</h1>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Math Development</title>
+    </head>
 
-</body>
+    <body>
+       <h1><b>mathdevelops.github.io</b> is still under construction.</h1>
+    </body>
+
 </html>
