--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
 
     <body>
-       <h1><b>mathdevelops.github.io</b> is still under construction.</h1>
+       <b>mathdevelops.github.io</b> is still under construction.</h1>
     </body>
 
 </html>
