--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     </head>
 
     <body>
-       <b>mathdevelops.github.io</b> is still under construction.
+       <h1>Math Development</h1>
+       <h2>mathdevelops.github.io is still under construction.</h2>
     </body>
 
 </html>
