--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <body>
        <h1>Math Development</h1>
-       <h2>mathdevelops.github.io is still under construction.</h2>
+       For now, you can visit our <a href="https://www.github.com/MathDevelops">GitHub</a> page.
     </body>
 
 </html>
