--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <body>
        <h1>Math Development</h1>
+       <b>mathdevelops.github.io</b> is still under construction.<br>
        For now, you can visit our <a href="https://www.github.com/MathDevelops">GitHub</a> page.
     </body>
 
