--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     </head>
 
     <body>
+        <img src="https://avatars.githubusercontent.com/u/98887399?s=200&v=4">
        <h1>Math Development</h1>
        <b>mathdevelops.github.io</b> is still under construction.<br>
        For now, you can visit our <a href="https://www.github.com/MathDevelops" target="_blank">GitHub</a> page.
