--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
 
     <body>
-        <img src="Math Development Logo.png">
+        <img src="Math Development Logo 300x300.png">
         <br>
         <h1>Math Development</h1>
         <b>mathdevelops.github.io</b> is still under construction.
