--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 
     <head>
-        <meta charset="utf-8">
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Math Development</title>
+        <link href="stylesheet.css" type="text/css" rel="stylesheet">
     </head>
 
     <body>
