added lots of cool stuff

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     </head>
 
     <body>
-        <img src="Math Development Logo 300x300.png">
+        <img src="images/Math Development Logo 80x80.png">
         <br>
         <h1>Math Development</h1>
         <b>mathdevelops.github.io</b> is still under construction.
         <br>
-        For now, you can visit our <a href="https://www.github.com/MathDevelops" target="_blank">GitHub</a> page.
+        For now, you can visit our <a href="https://www.github.com/MathDevelops" target="_blank">GitHub</a> page, or <a href="commissions/discordbots.html">apply for a custom Discord bot</a>.
     </body>
 
 </html>
