--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Math Development</title>
         <link href="stylesheet.css" type="text/css" rel="stylesheet">
+        <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     </head>
 
     <body>
