--- a/commissions/discordbots.html
+++ b/commissions/discordbots.html
@@ -12,7 +12,7 @@
         <img src="images/Math Development Logo 80x80.png">
         <br>
         <h1>Custom Discord Bots</h1>
-        Click <a href="https://mathdev.page.link/customdiscordbot">here</a> to apply for a custom Discord bot from Math Development.
+        Click <a href="https://mathdev.page.link/customdiscordbot" target="_blank">here</a> to apply for a custom Discord bot from Math Development.
         <br><br><br><br><br>
         <a href="https://mathdevelops.github.io">< Back</a>
     </body>
