--- a/commissions/discordbots/index.html
+++ b/commissions/discordbots/index.html
@@ -6,16 +6,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Custom Discord Bots | Math Development</title>
         <link href="stylesheet.css" type="text/css" rel="stylesheet">
-        <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+        <link rel="icon" type="image/x-icon" href="../../images/favicon.ico">
     </head>
 
     <body>
-        <img src="../images/Math Development Logo 80x80.png">
+        <img src="../../images/Math Development Logo 80x80.png">
         <br>
         <h1>Custom Discord Bots</h1>
         Click <a href="https://mathdev.page.link/customdiscordbot" target="_blank">here</a> to apply for a custom Discord bot from Math Development.
         <br><br><br><br><br>
-        <a href="../index.html">< Back</a>
+        <a href="../../index.html">< Back</a>
     </body>
 
 </html>
