--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>Math Development</h1>
         <b>mathdevelops.github.io</b> is still under construction.
         <br>
-        For now, you can visit our <a href="https://www.github.com/MathDevelops" target="_blank">GitHub</a> page, or <a href="commissions/discordbots.html">apply for a custom Discord bot</a>.
+        For now, you can visit our <a href="https://www.github.com/MathDevelops" target="_blank">GitHub</a> page, or <a href="commissions/discordbots/index.html">apply for a custom Discord bot</a>.
     </body>
 
 </html>
