--- a/commissions/discordbots/index.html
+++ b/commissions/discordbots/index.html
@@ -15,7 +15,7 @@
         <h1>Custom Discord Bots</h1>
         Click <a href="https://mathdev.page.link/customdiscordbot" target="_blank">here</a> to apply for a custom Discord bot from Math Development.
         <br><br><br><br><br>
-        <a href="../../index.html">< Back</a>
+        <a href="../../">< Back</a>
     </body>
 
 </html>
