--- a/commissions/discordbots/index.html
+++ b/commissions/discordbots/index.html
@@ -5,17 +5,21 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Custom Discord Bots | Math Development</title>
-        <link href="stylesheet.css" type="text/css" rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <link href="../../stylesheet.css" type="text/css" rel="stylesheet">
         <link rel="icon" type="image/x-icon" href="../../images/favicon.ico">
     </head>
 
     <body>
-        <img src="../../images/Math Development Logo 80x80.png">
-        <br>
-        <h1>Custom Discord Bots</h1>
-        Click <a href="https://mathdev.page.link/customdiscordbot" target="_blank">here</a> to apply for a custom Discord bot from Math Development.
-        <br><br><br><br><br>
-        <a href="../../">< Back</a>
+            <br>
+            <img src="../../images/Math Development Logo 80x80.png" class="imageAlignCenter">
+        <div class="textAlignCenter">
+            <br>
+            <h1>Custom Discord Bots</h1>
+            Click <a href="https://mathdev.page.link/customdiscordbot" target="_blank">here</a> to apply for a custom Discord bot from Math Development.
+            <br><br><br><br><br>
+            <a href="../../">< Back</a>
+        </div>
     </body>
 
 </html>
