--- a/index.html
+++ b/index.html
@@ -5,17 +5,21 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Math Development</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link href="stylesheet.css" type="text/css" rel="stylesheet">
         <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     </head>
 
     <body>
-        <img src="images/Math Development Logo 80x80.png">
-        <br>
-        <h1>Math Development</h1>
-        <b>mathdevelops.github.io</b> is still under construction.
-        <br>
-        For now, you can visit our <a href="https://www.github.com/MathDevelops" target="_blank">GitHub</a> page, or <a href="commissions/discordbots">apply for a custom Discord bot</a>.
+            <br>
+            <img src="images/Math Development Logo 80x80.png" class="imageAlignCenter">
+        <div class="textAlignCenter">
+            <br>
+            <h1>Math Development</h1>
+            <b>mathdevelops.github.io</b> is still under construction.
+            <br>
+            For now, you can visit our <a href="https://www.github.com/MathDevelops" target="_blank">GitHub</a> page, or <a href="commissions/discordbots">apply for a custom Discord bot</a>.
+        </div>
     </body>
 
 </html>
