--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     </head>
 
-    <body>
+    <body style="background-color: black">
             <br>
             <img src="images/Math Development Logo 80x80.png" class="imageAlignCenter">
         <div class="textAlignCenter">
