black background white text babbbyyy

--- a/commissions/discordbots/index.html
+++ b/commissions/discordbots/index.html
@@ -10,15 +10,16 @@
         <link rel="icon" type="image/x-icon" href="../../images/favicon.ico">
     </head>
 
-    <body>
+    <body style="background-color: black">
             <br>
             <img src="../../images/Math Development Logo 80x80.png" class="imageAlignCenter">
         <div class="textAlignCenter">
-            <br>
+            <textWhite>
             <h1>Custom Discord Bots</h1>
             Click <a href="https://mathdev.page.link/customdiscordbot" target="_blank">here</a> to apply for a custom Discord bot from Math Development.
             <br><br><br><br><br>
             <a href="../../">< Back</a>
+            </textWhite>
         </div>
     </body>
 
