--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
             <br>
             <img src="images/Math Development Logo 80x80.png" class="imageAlignCenter">
         <div class="textAlignCenter">
-            <br>
+            <textWhite>
             <h1>Math Development</h1>
             <b>mathdevelops.github.io</b> is still under construction.
             <br>
             For now, you can visit our <a href="https://www.github.com/MathDevelops" target="_blank">GitHub</a> page, or <a href="commissions/discordbots">apply for a custom Discord bot</a>.
+            </textWhite>
         </div>
     </body>
 
