--- a/commissions/discordbots/index.html
+++ b/commissions/discordbots/index.html
@@ -17,9 +17,9 @@
             <textWhite>
             <h1>Custom Discord Bots</h1>
             Click <a href="https://mathdev.page.link/customdiscordbot" target="_blank">here</a> to apply for a custom Discord bot from Math Development.
-            <br><br><br><br><br>
-            <a href="../../">< Back</a>
             </textWhite>
+            <br><br>
+            <a href="../../index.html"><button class="button1">← Back</button></a>
         </div>
     </body>
 
