--- a/index.html
+++ b/index.html
@@ -10,16 +10,14 @@
         <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     </head>
 
-    <body style="background-color: black">
+    <body style="background-color: black; color: white">
             <br>
             <img src="images/Math Development Logo 80x80.png" class="imageAlignCenter">
         <div class="textAlignCenter">
-            <textWhite>
             <h1>Math Development</h1>
             <b>mathdevelops.github.io</b> is still under construction.
             <br>
             For now, you can visit our <a href="https://www.github.com/MathDevelops" target="_blank">GitHub</a> page, or <a href="commissions/discordbots">apply for a custom Discord bot</a>.
-            </textWhite>
         </div>
     </body>
 
