--- a/commissions/discordbots/index.html
+++ b/commissions/discordbots/index.html
@@ -10,14 +10,12 @@
         <link rel="icon" type="image/x-icon" href="../../images/favicon.ico">
     </head>
 
-    <body style="background-color: black">
+    <body style="background-color: black; color: white">
             <br>
             <img src="../../images/Math Development Logo 80x80.png" class="imageAlignCenter">
         <div class="textAlignCenter">
-            <textWhite>
             <h1>Custom Discord Bots</h1>
             Click <a href="https://mathdev.page.link/customdiscordbot" target="_blank">here</a> to apply for a custom Discord bot from Math Development.
-            </textWhite>
             <br><br>
             <a href="../../index.html"><button class="button1">← Back</button></a>
         </div>
