--- a/commissions/discordbots/index.html
+++ b/commissions/discordbots/index.html
@@ -10,7 +10,7 @@
         <link rel="icon" type="image/x-icon" href="../../images/favicon.ico">
     </head>
 
-    <body style="background-color: black; color: white">
+    <body style="background-color: white; color: black">
             <br>
             <img src="../../images/Math Development Logo 80x80.png" class="imageAlignCenter">
         <div class="textAlignCenter">
@@ -18,7 +18,17 @@
             Click <a href="https://mathdev.page.link/customdiscordbot" target="_blank">here</a> to apply for a custom Discord bot from Math Development.
             <br><br>
             <a href="../../"><button class="button1">← Back</button></a>
+            <br><br>
         </div>
     </body>
+
+    <footer style="background-color: #12d8ef; color: #FFF307;">
+        <div class="textAlignRight">
+            <br>
+
+            <footerImage><a href="https://www.github.com/MathDevelops" target="_blank"><img src="../../images/githubLogo.png" height="30px" width="30px" class="footerImage"></a></footerImage>   
+            <br><br>
+        </div>
+    </footer>
 
 </html>
