--- a/index.html
+++ b/index.html
@@ -10,9 +10,17 @@
         <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     </head>
 
+    <header style="background-color: #12d8ef;">
+        <div class="textAlignCenter">
+            <br>
+            <h4 class="headerText">header coming soon im going to bed</h4>
+            <br>
+        </div>
+    </header>
+
     <body style="background-color: white; color: black">
             <br>
-            <img src="images/Math Development Logo 80x80.png" class="imageAlignCenter">
+            <img src="images/mathDevelopmentLogo1080x1080.png" class="imageAlignCenter">
         <div class="textAlignCenter">
             <h1>Math Development</h1>
             <b>mathdevelops.github.io</b> is still under construction.
@@ -22,7 +30,7 @@
         </div>
     </body>
 
-    <footer style="background-color: #12d8ef; color: #FFF307;">
+    <footer style="background-color: #12d8ef; color: black;">
         <div class="textAlignRight">
             <br>
 
