--- a/commissions/discordbots/index.html
+++ b/commissions/discordbots/index.html
@@ -23,7 +23,7 @@
             <img src="../../images/mathDevelopmentLogo1080x1080.png" class="imageAlignCenter">
         <div class="textAlignCenter">
             <h1>Custom Discord Bots</h1>
-            Click <a href="https://mathdev.page.link/customdiscordbot" target="_blank">here</a> to apply for a custom Discord bot from Math Development.
+            Click <a href="https://mathdev.page.link/customdiscordbot" target="_blank" style="text-decoration:none;">here</a> to apply for a custom Discord bot from Math Development.
             <br><br>
             <a href="../../"><button class="button1">← Back</button></a>
             <br><br>
