header/ss stuff

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <header style="background-color: #12d8ef;">
         <div class="textAlignCenter">
             <br>
-            <h4 class="headerText">header coming soon im going to bed</h4>
-            <br>
+            <h4 class="headerText"><b>Home</b> <a href="commissions/discordbots" class="headerText">Commissions</a>
+            <br><br>
         </div>
     </header>
 
