--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header style="background-color: #12d8ef;">
         <div class="textAlignCenter">
             <br>
-            <h4 class="headerText"><b>Home</b> <a href="commissions/discordbots" class="headerText">Commissions</a>
+            <h4 class="headerText"><b>Home</b> <a href="commissions/discordbots" class="headerText">Commissions</a></h4>
             <br><br>
         </div>
     </header>
