--- a/commissions/discordbots/index.html
+++ b/commissions/discordbots/index.html
@@ -25,7 +25,7 @@
             <h1>Custom Discord Bots</h1>
             Click <a href="https://mathdev.page.link/customdiscordbot" target="_blank" style="text-decoration:none;">here</a> to apply for a custom Discord bot from Math Development.
             <br><br>
-            <a href="../../"><button class="button1">← Back</button></a>
+            <a href="../../"><button class="button1"><b>← Back</b></button></a>
             <br><br>
         </div>
     </body>
