--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header style="background-color: #12d8ef;">
         <div class="textAlignCenter">
             <br>
-            <h4 class="headerText"><b>Home</b> <a href="commissions/discordbots" class="headerText">Commissions</a></h4>
+            <h4 class="headerText"><b>Home</b> <a href="commissions" class="headerText">Commissions</a></h4>
             <br>
         </div>
     </header>
@@ -22,6 +22,7 @@
             <br>
             <img src="images/mathDevelopmentLogo1080x1080.png" class="imageAlignCenter">
         <div class="textAlignCenter">
+            <br>
             <h1>Math Development</h1>
             <b>mathdevelops.github.io</b> is still under construction.
             <br>
