--- a/commissions/discordbots/index.html
+++ b/commissions/discordbots/index.html
@@ -20,7 +20,7 @@
 
     <body style="background-color: white; color: black">
             <br>
-            <img src="../../images/mathDevelopmentLogo1080x1080.png" class="imageAlignCenter">
+            <img src="../../images/mathDevelopmentLogo.png" class="imageAlignCenter" width="100">
         <div class="textAlignCenter">
             <h1>Custom Discord Bots</h1>
             Click <a href="https://mathdev.page.link/customdiscordbot" target="_blank" style="text-decoration:none;">here</a> to apply for a custom Discord bot from Math Development.
