--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <body style="background-color: white; color: black">
             <br>
-            <img src="images/mathDevelopmentLogo1080x1080.png" class="imageAlignCenter">
+            <img src="images/mathDevelopmentLogo.png" class="imageAlignCenter" width="100">
         <div class="textAlignCenter">
             <br>
             <h1>Math Development</h1>
