--- a/commissions/index.html
+++ b/commissions/index.html
@@ -20,7 +20,7 @@
 
     <body style="background-color: white; color: black">
             <br>
-            <img src="../images/mathDevelopmentLogo1080x1080.png" class="imageAlignCenter">
+            <img src="../images/mathDevelopmentLogo.png" class="imageAlignCenter" width="100">
         <div class="textAlignCenter">
             <br>
             <h2>Commissions</h2>
