--- a/commissions/discordbots/index.html
+++ b/commissions/discordbots/index.html
@@ -1,42 +1,1 @@
-<!DOCTYPE html>
-<html>
-
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Custom Discord Bots | Math Development</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <link href="../../stylesheet.css" type="text/css" rel="stylesheet">
-        <link rel="icon" type="image/x-icon" href="../../images/favicon.ico">
-    </head>
-
-    <header style="background-color: #12d8ef;">
-        <div class="textAlignCenter">
-            <br>
-            <h4 class="headerText">header coming soon im going to bed</h4>
-            <br>
-        </div>
-    </header>
-
-    <body style="background-color: white; color: black">
-            <br>
-            <img src="../../images/mathDevelopmentLogo.png" class="imageAlignCenter" width="100">
-        <div class="textAlignCenter">
-            <h1>Custom Discord Bots</h1>
-            Click <a href="https://mathdev.page.link/customdiscordbot" target="_blank" style="text-decoration:none;">here</a> to apply for a custom Discord bot from Math Development.
-            <br><br>
-            <a href="../"><button class="button1"><b>← Back</b></button></a>
-            <br><br>
-        </div>
-    </body>
-
-    <footer style="background-color: #12d8ef; color: black;">
-        <div class="textAlignRight">
-            <br>
-
-            <footerImage><a href="https://www.github.com/MathDevelops" target="_blank"><img src="../../images/githubLogo.png" height="30px" width="30px" class="footerImage"></a></footerImage>   
-            <br><br>
-        </div>
-    </footer>
-
-</html>
+<!DOCTYPE html> <html lang="en"> <head> <meta charset="utf-8" /> <meta name="viewport" content="width=device-width, initial-scale=1" /> <title>Math Development Custom Discord Bot</title> <style>*{margin:0;padding:0;} html,body,#wrapper{width:100%;height:100%;} iframe{border-radius:0 !important;}</style> </head> <body> <div id="wrapper" data-tf-widget="CoEsjJSx" data-tf-inline-on-mobile data-tf-medium="snippet" ></div> <script src="//embed.typeform.com/next/embed.js"></script> </body> </html>
