--- a/commissions/index.html
+++ b/commissions/index.html
@@ -24,7 +24,7 @@
         <div class="textAlignCenter">
             <br>
             <h2>Commissions</h2>
-            <button data-tf-popup="CoEsjJSx" data-tf-iframe-props="title=Math Development Custom Discord Bot" data-tf-medium="snippet" class="button1">Discord Bots</button><script src="//embed.typeform.com/next/embed.js"></script>
+            <button data-tf-popup="CoEsjJSx" data-tf-size="70" data-tf-iframe-props="title=Math Development Custom Discord Bot" data-tf-medium="snippet" class="button1"><b>Discord Bots</b></button><script src="//embed.typeform.com/next/embed.js"></script>
             <br><br>
             <button class="button1"><b>More coming soon!</b></button>
             <br><br>
