--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <h1>Math Development</h1>
             <b>mathdevelops.github.io</b> is still under construction.
             <br>
-            For now, you can visit our <a href="https://www.github.com/MathDevelops" target="_blank" style="text-decoration:none;">GitHub</a> page, or <a data-tf-popup="CoEsjJSx" data-tf-size="70" data-tf-iframe-props="title=Math Development Custom Discord Bot" data-tf-medium="snippet" style="text-decoration:none;">apply for a custom Discord bot</a>.
+            For now, you can visit our <a href="https://www.github.com/MathDevelops" target="_blank" style="text-decoration:none;">GitHub</a> page, or <a data-tf-popup="CoEsjJSx" data-tf-size="70" data-tf-iframe-props="title=Math Development Custom Discord Bot Application" data-tf-medium="snippet" style="text-decoration:none;">apply for a custom Discord bot</a><script src="//embed.typeform.com/next/embed.js"></script>.
             <br><br>
         </div>
     </body>
