--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
     </body>
 
     <footer style="background-color: #12d8ef; color: black;">
-        <div class="textAlignRight">
+        <div class="textAlignLeft">
             <br>
-
-            <footerImage><a href="https://www.github.com/MathDevelops" target="_blank"><img src="images/githubLogo.png" height="30px" width="30px" class="footerImage"></a></footerImage>   
-            <br><br>
+            <h2>footer text testing</h2>
         </div>
+            <div style="text-align:right;"><footerImage><a href="https://www.github.com/MathDevelops" target="_blank"><img src="images/githubLogo.png" height="30px" width="30px" class="footerImage"></a></footerImage>   </div>
+            <br><br>
     </footer>
 
 </html>
