--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <footer style="background-color: #12d8ef; color: black;">
         <div class="textAlignLeft">
             <br>
-            <h2>footer text testing</h2>
+             hehe
         </div>
             <div style="text-align:right;"><footerImage><a href="https://www.github.com/MathDevelops" target="_blank"><img src="images/githubLogo.png" height="30px" width="30px" class="footerImage"></a></footerImage>   </div>
             <br><br>
