--- a/404.html
+++ b/404.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Math Development</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <title>404 | Math Development</title>
         <link href="stylesheet.css" type="text/css" rel="stylesheet">
         <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     </head>
 
     <header>
-        <h1>404</h1>
+        <div class="fourohfour">
+            <img src="images/404.png" height="250px">
+            <br><br><br><br>
+            <button class="button1"><a href="index.html"><b>Take me home</b></a></button>
+        </div>
     </header>
 </html>
