--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
         <div class="fourohfour">
             <img src="images/404.png" height="250px">
             <br><br><br><br>
-            <button class="button1"><a href="index.html"><b>Take me home</b></a></button>
+            <button class="button1"><a href="rdth/index.html"><b>Take me home</b></a></button>
         </div>
     </header>
 </html>
